fix: gap between article and aside in main with 20px done

--- a/guaita.miguel-angel.diw5.css-layout/assessment/styles.css
+++ b/guaita.miguel-angel.diw5.css-layout/assessment/styles.css
@@ -28,6 +28,7 @@ body {
     max-width: 980px;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    gap: 20px;
   }
   
   nav {
